# llm-zoomcamp-2026

./: homework_module1_agentic_rag.ipynb  homework_module3_orchestration.ipynb  pyproject.toml  rag_helper.py  setup.txt
03-orchestration/: homework_module3_orchestration.ipynb  setup.txt
dlt-hw/: agent.py  logfire_ingest.py  main.py  pyproject.toml  test.txt
dlt-hw/.dlt/: .toolkits  config.toml
dlt-hw/tests/: test_logfire_ingest.py
llm-zoomcamp-hw2/: homework_module2_vector_search.ipynb  homework_module4_evalutation.ipynb  pyproject.toml  setup.txt
llm-zoomcamp-hw5/: .gitignore  hw5.ipynb  pyproject.toml  starter.py  traces.db
