[project]
name = "llm-zoomcamp-hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "minsearch>=0.1.1",
    "openai>=2.43.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "python-dotenv>=1.2.2",
]
